--- a/AdminMasterPage.master
+++ b/AdminMasterPage.master
@@ -31,6 +31,7 @@
     <script src="src/js/morris.js"></script>
 </head>
 <body>
+<form id="form1" runat="server">
 <section id="container">
 <!--header start-->
 <header class="header fixed-top clearfix">
@@ -238,9 +239,9 @@
             <ul class="dropdown-menu extended logout">
                 <li><a href="#"><i class=" fa fa-suitcase"></i>Profile</a></li>
                 <li><a href="#"><i class="fa fa-cog"></i> Settings</a></li>
-                <form id="form1" runat="server">
+              
                 <li><a href="#"><i class="fa fa-key"></i><asp:LinkButton ID="LinkButton1" runat="server" onclick="LinkButton1_Click">logout</asp:LinkButton></a></li>
-                </form>
+             
             </ul>
         </li>
         <!-- user login dropdown end -->
@@ -273,6 +274,13 @@
 						<li><a href="glyphicon.html">glyphicon</a></li>
                         <li><a href="grids.html">Grids</a></li>
                     </ul>
+                </li>
+
+                 <li>
+                    <a href="ManageUser.aspx">
+                        <i class="fa fa-user"></i>
+                        <span>Manage User </span>
+                    </a>
                 </li>
                 <li>
                     <a href="fontawesome.html">
@@ -461,5 +469,6 @@
 		});
 	</script>
 	<!-- //calendar -->
+    </form>
 </body>
 </html>
