--- a/AdminMasterPage.master
+++ b/AdminMasterPage.master
@@ -289,6 +289,16 @@
                         <span>Manage Service </span>
                     </a>
                 </li> 
+                 <li class="sub-menu">
+                    <a href="javascript:;">
+                        <i class="fa fa-th"></i>
+                        <span>Manage product</span>
+                    </a>
+                    <ul class="sub">
+                        <li><a href="ManageCategory.aspx">Manage category</a></li>
+                        <li><a href="#">Manage product</a></li>
+                    </ul>
+                </li>
 
                 <li>
                     <a href="fontawesome.html">
@@ -296,16 +306,7 @@
                         <span>Font awesome </span>
                     </a>
                 </li>
-                <li class="sub-menu">
-                    <a href="javascript:;">
-                        <i class="fa fa-th"></i>
-                        <span>Data Tables</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a href="basic_table.html">Basic Table</a></li>
-                        <li><a href="responsive_table.html">Responsive Table</a></li>
-                    </ul>
-                </li>
+               
                 <li class="sub-menu">
                     <a href="javascript:;">
                         <i class="fa fa-tasks"></i>
